Ability to add template (BUILT IN) missions. Without DB for now.