@@ -1,6 +1,7 @@
 package pl.bartlomiejstepien.armaserverwebgui.domain.server.mission;
 
 import lombok.AllArgsConstructor;
+import org.springframework.http.ResponseEntity;
 import org.springframework.http.codec.multipart.FilePart;
 import org.springframework.stereotype.Service;
 import pl.bartlomiejstepien.armaserverwebgui.domain.server.mission.exception.MissionFileAlreadyExistsException;
@@ -50,6 +51,10 @@ public class MissionServiceImpl implements MissionService
     @Override
     public boolean deleteMission(String missionName)
     {
+        List<Mission> missions = getMissions().getEnabledMissions().stream()
+                .filter(mission -> !mission.getName().equals(missionName))
+                .toList();
+        saveEnabledMissionList(missions);
         return this.missionStorage.deleteMission(missionName);
     }
 
@@ -59,7 +64,7 @@ public class MissionServiceImpl implements MissionService
         ArmaServerConfig armaServerConfig = this.serverConfigStorage.getServerConfig();
         armaServerConfig.setMissions(new ArrayList<>(missions.stream()
                 .map(this::convertToArmaMissionObject)
-                .collect(Collectors.toList())));
+                .toList()));
         this.serverConfigStorage.saveServerConfig(armaServerConfig);
     }
 
@@ -69,15 +74,28 @@ public class MissionServiceImpl implements MissionService
         List<String> installedMissionsNames = getInstalledMissionNames();
         List<Mission> enabledMissions = this.serverConfigStorage.getServerConfig().getMissions().stream()
                 .map(this::convertToDomainMission)
-                .collect(Collectors.toList());
+                .toList();
         Missions missions = new Missions();
         missions.setEnabledMissions(enabledMissions);
         missions.setDisabledMissions(installedMissionsNames.stream()
                 .filter(mission -> enabledMissions.stream().noneMatch(mission1 -> mission1.getName().equals(mission)))
                 .map(missionName -> new Mission(missionName, Mission.Difficulty.REGULAR, Collections.emptySet()))
-                .collect(Collectors.toList()));
+                .toList());
 
         return missions;
+    }
+
+    @Override
+    public Mono<ResponseEntity<?>> addMission(String template)
+    {
+        //TODO: Put template mission in server.cfg.
+
+        List<Mission> enabledMissions = new ArrayList<>(getMissions().getEnabledMissions());
+        enabledMissions.add(new Mission(template, Mission.Difficulty.REGULAR, Collections.emptySet()));
+        saveEnabledMissionList(enabledMissions);
+
+        //TODO: Put template mission in database.
+        return Mono.empty();
     }
 
     private Mission convertToDomainMission(ArmaServerConfig.Missions.Mission armaMission)
